[package]
name = "kosmo_benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
kosmo_math = { path = "../kosmo_math" }
kosmo_physics = { path = "../kosmo_physics" }
kosmo_render = { path = "../kosmo_render" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gravity"
harness = false
